# solvro_coctails

./: README.md  dependencies.txt  environment.yaml  pyproject.toml  requirements.txt
data/processed/: processed_cocktails.json
src/: clustering.py  eda.py  preprocessing.py
src/.ipynb_checkpoints/: clustering-checkpoint.py
